--- a/PIAndroidAgent/bin/AndroidManifest.xml
+++ b/PIAndroidAgent/bin/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="18" />
+    <instrumentation android:targetPackage="com.kupepia.piandroidagent" android:name="android.test.InstrumentationTestRunner"></instrumentation>
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-library android:name="android.test.runner" />
     </application>
 
 </manifest>
