--- a/PIAndroidAgent/AndroidManifest.xml
+++ b/PIAndroidAgent/AndroidManifest.xml
@@ -7,7 +7,11 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="18" />
-    <instrumentation android:targetPackage="com.kupepia.piandroidagent" android:name="android.test.InstrumentationTestRunner"></instrumentation>
+
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.kupepia.piandroidagent" >
+    </instrumentation>
 
     <application
         android:allowBackup="true"
@@ -15,15 +19,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.kupepia.piandroidagent.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.kupepia.piandroidagent.LoginActivity"
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="adjustResize|stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <uses-library android:name="android.test.runner" />
+
+        <activity
+            android:name="com.kupepia.piandroidagent.MainActivity"
+            android:label="@string/title_activity_login">
+        </activity>
     </application>
 
 </manifest>
