--- a/PIAndroidAgent/AndroidManifest.xml
+++ b/PIAndroidAgent/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="com.kupepia.piandroidagent" >
     </instrumentation>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/title_activity_login"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.kupepia.piandroidagent.LoginActivity"
@@ -29,7 +30,7 @@
 
         <activity
             android:name="com.kupepia.piandroidagent.MainActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
