--- a/PIAndroidAgent/AndroidManifest.xml
+++ b/PIAndroidAgent/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<<<<<<< Original
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kupepia.piandroidagent"
@@ -21,7 +20,7 @@
         android:label="@string/title_activity_login"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.kupepia.piandroidagent.LoginActivity"
+            android:name="com.kupepia.piandroidagent.ui.LoginActivity"
             android:label="@string/app_name" 
             android:windowSoftInputMode="adjustResize|stateVisible">
             <intent-filter>
@@ -33,26 +32,6 @@
 
         <uses-library android:name="android.test.runner" />
 
-        <activity
-            android:name="com.kupepia.piandroidagent.MainActivity"
-            android:label="@string/app_name">
-				
-            
-        </activity>
     </application>
 
 </manifest>
-
-=======
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <application>
-        <activity android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateVisible"
-            >
-        </activity>
-    </application>
-
-</manifest>
->>>>>>> Added
