--- a/PIAndroidAgent/AndroidManifest.xml
+++ b/PIAndroidAgent/AndroidManifest.xml
@@ -5,14 +5,15 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="9"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="com.kupepia.piandroidagent" >
     </instrumentation>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,8 +22,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.kupepia.piandroidagent.ui.LoginActivity"
-            android:label="@string/app_name" 
-            android:windowSoftInputMode="adjustResize|stateVisible">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,6 +33,17 @@
 
         <uses-library android:name="android.test.runner" />
 
+        <activity
+            android:name="com.kupepia.piandroidagent.ActivityListActivity"
+            android:label="@string/title_activity_list" >
+        </activity>
+        <activity
+            android:name="com.kupepia.piandroidagent.ActivityDetailActivity"
+            android:label="@string/title_activity_detail" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityListActivity" />
+        </activity>
     </application>
 
 </manifest>
