--- a/PIAndroidAgent/AndroidManifest.xml
+++ b/PIAndroidAgent/AndroidManifest.xml
@@ -40,6 +40,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+       
+        <activity 
+            android:name="AddIPTablesRule" 
+            android:theme="@android:style/Theme.Dialog">
+        </activity>
+    
     </application>
 
 </manifest>
+
